--- a/house.html
+++ b/house.html
@@ -11,8 +11,11 @@
         <header>
             <div>
                 <div class="d-flex justify-content-between align-items-center container-fluid">
-                    <img class="img-fluid" src="/assets/images/logo.jpg">
-                    <a class="container-fluid" href="mailto:info@tgif.org"> info@tgif.org </a>
+                    <img class="img-fluid" src="/assets/images/logo.jpg" href="index.html">
+                    <div>
+                        <img  style ="height: 50px" style="width: 50px" src="assets/images/email-logo.png" href="mailto:info@tgif.org">
+                        <a href="mailto:info@tgif.org"> info@tgif.org </a>
+                    </div>
                 </div>
             </div>
             <div class="navbar bg-dark text-light">
