--- a/house.html
+++ b/house.html
@@ -48,9 +48,16 @@
             <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
             <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
         </div>
-        <div class=col style="height: 30px"> </div>
-
-
+        <div class=col style="height: 15px"> </div>
+        <div class="d-flex justify-content-between">
+            <form class="d-flex justify-content-around" id="partySelect">
+                <label> Democrat <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="D"> </input> </label> 
+                <label> Independent <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="I"> </input> </label>
+                <label> Republican <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="R"> </input> </label> 
+            </form>
+            <select id="state" name="states"></select>
+        </div>
+        <div class=col style="height: 15px"> </div>
         <table class="table table-hover">
             <thead class="thead-dark">
                 <tr class="border">
