--- a/senate.html
+++ b/senate.html
@@ -53,22 +53,15 @@
         </div>
         <div class=col style="height: 30px"> </div>
         <div class="d-flex justify-content-between">
-            <form id="partySelect">
-                <input class="party" type="checkbox" onchange="partySelect()" value="D"> </input> <label> Democrat </label>
-                <input class="party" type="checkbox" onchange="partySelect()" value="I"> </input> <label> Independent </label>
-                <input class="party" type="checkbox" onchange="partySelect()" value="R"> </input> <label> Republican </label>
+            <form class="d-flex justify-content-around" id="partySelect">
+                <label> Democrat <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="D"> </input> </label> 
+                <label> Independent <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="I"> </input> </label>
+                <label> Republican <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="R"> </input> </label> 
             </form>
-            <select class="form_drop" name="stateSelect">
-                <option value="Katzemaier"> </option>
-                <option value="Marjorie"> </option>
-                <option value="Greenbay"> </option>
-                <option value="North"> </option>
-                <option value=""> </option>
-                <option value=""> </option>
-            </select>
+            <select id="state" name="states"></select>
         </div>
         <div class=col style="height: 30px"> </div>
-        <table class="table table-hover" id="table">
+        <table class="table table-hover" id="tableTop">
             <thead class="thead-dark">
                 <tr class="border">
                     <th> Members </th>
