--- a/senate_attendance.html
+++ b/senate_attendance.html
@@ -70,7 +70,9 @@
                 </div>
             </div>
         </div>
+        
         <div class=col style="height: 30px"> </div>
+        <h3> The Senate at a Glance </h3>
         <table class="table table-hover" id="tableTop">
             <thead class="thead-dark">
                 <tr class="border">
@@ -85,6 +87,73 @@
         </table>
 
         <div class=col style="height: 30px"> </div>
+        <h3> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </h3>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> Party </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41; </th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            <tbody class="bg-light text-dark" id="mostAttendBody">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+        </table>
+
+        <div class=col style="height: 30px"> </div>
+        <h2> Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </h2>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41;</th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            </thead>
+            <tbody class="bg-light text-dark" id="mostAttendBodyDem">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+        </table>
+
+        <div class=col style="height: 30px"> </div>
+        <h3> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </h3>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41; </th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            <tbody class="bg-light text-dark" id="mostAttendBodyRep">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+        </table>
+
+        <div class=col style="height: 30px"> </div>
+        <h3> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </h3>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41; </th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            <tbody class="bg-light text-dark" id="mostAttendBodyInd">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+        </table>
+
+
+        <div class=col style="height: 30px"> </div>
         <h2> Least Engaged &#40;Bottom 10% Attendance Rate&#41; </h2>
         <table class="table table-hover" id="tableTop">
             <thead class="thead-dark">
@@ -96,21 +165,6 @@
             </thead>
             <tbody class="bg-light text-dark" id="leastAttendBody">
                 <tr class="border-bottom" id="leastAttendRow"> </tr>
-            </tbody>
-        </table>
-
-        <div class=col style="height: 30px"> </div>
-        <h2> Most Engaged &#40;Top 10% Attendance Rate&#41; </h2>
-        <table class="table table-hover" id="tableTop">
-            <thead class="thead-dark">
-                <tr class="border">
-                    <th> Name </th>
-                    <th> Num. of Missed Votes </th>
-                    <th> Missed &#40;%&#41; </th>
-                </tr>
-            </thead>
-            <tbody class="bg-light text-dark" id="mostAttendBody">
-                <tr class="border-bottom" id="mostAttendRow"> </tr>
             </tbody>
         </table>
 
@@ -128,10 +182,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
         glanceTable(allMembers)
-
+        topAttendTable();
+        topAttendTableDem();
+        topAttendTableRep();
+        topAttendTableInd();
     </script>
-
-
 </body>
 
 </html>
